layout issues

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1442,9 +1442,7 @@ $include-html-global-classes: $include-html-classes;
 
 @import 'foundation';
 
-body{
-	background-color: white;
-}
+
 
 .centerElements{
 	text-align: center;
